<resources>
    <string name="app_name">LandF</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>

    <string name="tab_home">首页</string>
    <string name="virtue">美德</string>
    <string name="realese">发布</string>
    <string name="try_find">找找</string>
    <string name="me">我</string>

    <string name="back">返回</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="name">姓名</string>
    <string name="next_step">下一步</string>
    <string name="phone_num">手机号</string>
    <string name="phone_hint">11位手机号</string>
    <string name="password_space">密&#160;&#160;&#160;&#160;码</string>
    <string name="pwd_hint_text">6–16位字符</string>
    <string name="input_pwd">请输入密码,6–16个字符</string>
    <string name="input_phone">请输入正确格式的手机号码</string>
    <string name="do_not_contains_chinese_in_pwd">密码中请不要设置中文</string>
    <string name="pwd_too_simple">您的密码过于简单，请重新输入</string>
    <string name="delete_sure">确认删除吗</string>
    <string name="remind">提示</string>
    <string name="confirm_phone_num">确认手机号</string>
    <string name="send_captcha_to_phone">我们将会发送验证码到您的手机:</string>
    <string name="wait_a_moment">请稍候&#8230;</string>
    <string name="input_verify_code">填写验证码</string>
    <string name="captcha">验证码</string>
    <string name="input_received_captcha">请输入收到的验证码</string>
    <string name="obtain_again">重新获取</string>
    <string name="input_phone_captcha">请输入您通过%1$s收到的验证码</string>
    <string name="nickname">昵&#160;&#160;&#160;&#160;称</string>
    <string name="nickname_hint">请输入昵称</string>
    <string name="register_fail">注册失败</string>
    <string name="remain_seconds">还剩%1$d秒</string>
    <string name="captcha_not_null">验证码不能为空</string>
    <string name="cacha_has_send">验证码已发送</string>
    <string name="login_fail">登录失败</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="logout">退出登录</string>
    <string name="confirm_logout">确认要退出登录吗？</string>
    <string name="lost">失物</string>
    <string name="found">招领</string>
    <string name="lost_info">失物信息</string>
    <string name="found_info">招领信息</string>
    <string name="any_word_to_say">说点什么吧...</string>
    <string name="lost_place">丢失地点</string>
    <string name="thing_type">物品类型</string>
    <string name="lost_date">丢失日期</string>
    <string name="realese_lost">发布失物</string>
    <string name="realese_found">发布招领</string>

    <!-- Thing Type -->
    <string name="type">分类</string>
    <string name="all">全部</string>
    <string name="wallet">钱包</string>
    <string name="certificates">证件</string>
    <string name="digital">数码</string>
    <string name="ornaments">饰品</string>
    <string name="clothes">衣服</string>
    <string name="file">文件</string>
    <string name="book">书籍</string>
    <string name="pet">宠物</string>
    <string name="car">车辆</string>
    <string name="other">其他</string>

    <!-- Release -->
    <string name="record_lost">失物记录</string>
    <string name="record_found">招领记录</string>
    <string name="record_discover">发现记录</string>
    <string name="feedback">意见反馈</string>
    <string name="app_share">app分享</string>
    <string name="clear_catch">清空缓存</string>
    <string name="check_update">检查更新</string>
    <string name="about_us">关于我们</string>
    <string name="date_setting">日期设置</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="get_address">获取地址</string>

    <string name="web_not_well">网络不行诶，稍后试试吧！</string>
    <string name="address">地址</string>
    <string name="error">错误</string>
    <string name="input_content">请输入内容</string>
    <string name="input_type">请输入类型</string>
    <string name="input_date">请输入日期</string>
    <string name="input_place">请输入地点</string>
    <string name="press_again_exit">再按一次后退键退出应用程序</string>
    <string name="take_photo">拍照</string>
    <string name="select_photo">相册中选择</string>
    <string name="release_success">发布成功</string>
    <string name="skip">跳过</string>
    <string name="call">电话</string>
    <string name="send_sms">短信</string>
    <string name="share">分享</string>
    <string name="call_to_phone">打电话联系：%1$s</string>
    <string name="sms_to_phone">发短信给电话：%1$s</string>
    <string name="share_lost">亲爱的小伙伴们，我的一个好朋友丢了一件心爱的宝贝，希望找到的小伙伴能和我联系哦！</string>
    <string name="share_found">亲爱的小伙伴们，我的一个好朋友捡到一件宝贝，是哪位小伙伴不小心丢的和我联系哦！</string>
    <string name="no_sdCard">未检测到SD卡，不能支持该功能</string>
    <string name="word_app_share">LandF，寻找最珍贵的。快来下载吧！</string>
    <string name="commit_comment">提交留言</string>
    <string name="input_remain">还可以输入</string>
    <string name="user_feedback">我的反馈</string>
    <string name="word">字</string>
    <string name="input_your_feedback_please">请输入您要留言的内容</string>
    <string name="enter_least_3_msg_word">请输入最少3个字的留言内容</string>
    <string name="conmmit_success">提交成功</string>
    <string name="checking_update">正在检查更新...</string>
    <string name="last_version_now">当前为最新版</string>
    <string name="realese_find_must_pic">发布发现必须要照片</string>
    <string name="find_detail">发现详情</string>
    <string name="title">标题</string>
    <string name="title_lost">亲爱的小伙伴，我丢了一件心爱的宝贝，希望大家帮我找一下</string>
    <string name="title_found">亲爱的小伙伴，我捡到一件心爱的宝贝，希望失主看到呀</string>
    <string name="already_register">该号码已经注册</string>
    <string name="verify_fail">验证失败</string>
    <string name="version_info">版本信息：%1$s</string>
</resources>
