<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg">

    <include
        android:id="@+id/include_title_bar"
        layout="@layout/title_bar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/phone_label"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/inputbox_height"
        android:layout_marginTop="@dimen/fifteen_dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/page_margin_left"
        android:paddingRight="@dimen/_22dp"
        android:text="@string/phone_num"
        android:textColor="@color/primary_text_color"
        android:textSize="@dimen/_16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include_title_bar" />

    <com.jerry.zhoupro.widget.PhoneNumEditText
        android:id="@+id/et_account"
        style="@style/input_edittext_style"
        android:layout_width="0dp"
        android:background="@color/white"
        android:drawableRight="@mipmap/delete_btn_nor"
        android:hint="@string/phone_hint"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:maxLength="13"
        android:paddingRight="@dimen/fourteen_dp"
        android:textColorHint="@color/hint_text_color"
        android:textSize="@dimen/_16sp"
        app:layout_constraintBottom_toTopOf="@+id/pwd_label"
        app:layout_constraintLeft_toRightOf="@+id/phone_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/phone_label"
        app:type="0" />

    <TextView
        android:id="@+id/pwd_label"
        android:layout_width="0dp"
        android:layout_height="@dimen/fifty_dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/page_margin_left"
        android:paddingRight="@dimen/_22dp"
        android:text="@string/password_space"
        android:textColor="@color/primary_text_color"
        android:textSize="@dimen/_16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/phone_label"
        app:layout_constraintTop_toBottomOf="@+id/phone_label" />

    <com.jerry.zhoupro.widget.MyEditText
        android:id="@+id/et_passwd"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/white"
        android:drawableRight="@mipmap/delete_btn_nor"
        android:ems="10"
        android:hint="@string/pwd_hint_text"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:maxLength="16"
        android:maxLines="1"
        android:textColor="@color/primary_text_color"
        android:textColorHint="@color/hint_text_color"
        android:textSize="@dimen/_16sp"
        app:layout_constraintBottom_toBottomOf="@+id/pwd_label"
        app:layout_constraintLeft_toRightOf="@+id/pwd_label"
        app:layout_constraintRight_toLeftOf="@+id/iv_pwd_show"
        app:layout_constraintTop_toTopOf="@+id/pwd_label" />

    <ImageView
        android:id="@+id/iv_pwd_show"
        android:layout_width="@dimen/fifty_dp"
        android:layout_height="@dimen/fifty_dp"
        android:background="@color/white"
        android:src="@mipmap/eye_hide"
        app:layout_constraintBottom_toBottomOf="@+id/pwd_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pwd_label" />

    <View
        android:id="@+id/view"
        style="@style/horizontal_line_color_style"
        android:layout_marginLeft="@dimen/page_margin_left"
        app:layout_constraintBottom_toBottomOf="@+id/phone_label" />

    <TextView
        android:id="@+id/tv_login"
        style="@style/primary_btn_style"
        android:layout_marginTop="39dp"
        android:text="@string/login"
        app:layout_constraintTop_toBottomOf="@+id/pwd_label" />

    <TextView
        android:id="@+id/tv_reg"
        android:layout_width="0dp"
        android:layout_height="@dimen/fifty_dp"
        android:layout_marginTop="@dimen/fifteen_dp"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/blue_text_color"
        android:textSize="@dimen/_16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tv_forget_pwd"
        app:layout_constraintTop_toBottomOf="@+id/tv_login" />

    <TextView
        android:id="@+id/tv_forget_pwd"
        android:layout_width="0dp"
        android:layout_height="@dimen/fifty_dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/forget_pwd"
        android:textColor="@color/blue_text_color"
        android:textSize="@dimen/_16sp"
        android:visibility="gone"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_reg"
        app:layout_constraintLeft_toRightOf="@+id/tv_reg"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
