<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/alert_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/thirteen_dp"
        android:paddingLeft="@dimen/twenty_dp"
        android:paddingRight="@dimen/twenty_dp"
        android:paddingTop="@dimen/sixteen_dp"
        android:text="@string/remind"
        android:textColor="@color/primary_text_color"
        android:textSize="@dimen/_18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/sixteen_dp"
        android:paddingLeft="@dimen/twenty_dp"
        android:paddingRight="@dimen/twenty_dp"
        android:text="@string/delete_sure"
        android:textColor="@color/primary_text_color"
        android:textSize="@dimen/_16sp" />

    <EditText
        android:id="@+id/et_input"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/et_r5"
        android:gravity="center_vertical"
        android:inputType="text"
        android:paddingBottom="@dimen/sixteen_dp"
        android:paddingLeft="@dimen/twenty_dp"
        android:paddingRight="@dimen/twenty_dp"
        android:layout_marginBottom="@dimen/sixteen_dp"
        android:textColor="@color/primary_text_color"
        android:textColorHint="@color/text_gray"
        android:textSize="@dimen/_13sp"
        android:visibility="gone" />

    <View
        style="@style/horizontal_line_color_style"
        android:background="@color/alertdialog_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_neg"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="14dp"
            android:paddingTop="14dp"
            android:text="@string/cancel"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/_15sp" />

        <ImageView
            android:id="@+id/img_line"
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/alertdialog_line" />

        <TextView
            android:id="@+id/btn_pos"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="14dp"
            android:paddingTop="14dp"
            android:text="@string/ok"
            android:textColor="@color/red_primary"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>