<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg">

    <include
        layout="@layout/title_bar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/phone_num_text"
        android:layout_width="0dp"
        android:layout_height="@dimen/_42dp"
        android:gravity="center"
        android:textColor="@color/second_text_color"
        android:textSize="@dimen/_14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_bar" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="@dimen/forty_dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/captcha"
        android:textColor="@color/primary_text_color"
        android:textSize="@dimen/_16sp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/edit_code"
        app:layout_constraintTop_toBottomOf="@+id/phone_num_text" />

    <EditText
        android:id="@+id/edit_code"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:hint="@string/input_received_captcha"
        android:inputType="number"
        android:maxLength="6"
        android:textColor="@color/primary_text_color"
        android:textColorHint="@color/hint_text_color"
        android:textSize="@dimen/_16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintLeft_toRightOf="@+id/textView"
        app:layout_constraintRight_toLeftOf="@+id/cal_tv"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/cal_tv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/obtain_again"
        android:textColor="@color/blue_primary"
        android:textSize="@dimen/_14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintHorizontal_weight="1.5"
        app:layout_constraintLeft_toRightOf="@+id/edit_code"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <View
        style="@style/vertical_line_color_style"
        android:layout_height="0dp"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintLeft_toLeftOf="@+id/cal_tv"
        app:layout_constraintTop_toTopOf="@+id/textView" />


    <TextView
        android:id="@+id/button_commit"
        style="@style/primary_btn_style"
        android:layout_marginTop="@dimen/thirty_dp"
        android:background="@drawable/btn_login_bg"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/ok"
        android:textColor="@color/login_btn_text_color"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</android.support.constraint.ConstraintLayout>

