<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:paddingBottom="@dimen/twelve_dp"
        android:paddingTop="@dimen/twelve_dp"
        android:text="@string/realese"
        android:textColor="@color/primary_text_color"
        android:textSize="@dimen/_17sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_release_lost"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/iv_cancel"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@drawable/white_bg_selector"
        android:gravity="center"
        android:scaleType="center"
        android:src="@drawable/ic_cancel"
        android:textColor="@color/second_text_color"
        android:textSize="@dimen/_17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tv_release_lost"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@drawable/white_bg_selector"
        android:drawableTop="@mipmap/ic_launcher"
        android:gravity="center"
        android:orientation="vertical"
        android:text="@string/lost"
        app:layout_constraintBottom_toTopOf="@+id/iv_cancel"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tv_release_found" />

    <TextView
        android:id="@+id/tv_release_found"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@drawable/white_bg_selector"
        android:drawableTop="@mipmap/ic_launcher"
        android:gravity="center"
        android:orientation="vertical"
        android:text="@string/found"
        app:layout_constraintBottom_toBottomOf="@+id/tv_release_lost"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/tv_release_lost"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_release_lost" />

    <View
        android:id="@+id/devider1"
        style="@style/horizontal_line_color_style"
        android:background="@color/gray_line_color_second"
        app:layout_constraintBottom_toTopOf="@+id/iv_cancel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <View
        android:id="@+id/devider2"
        style="@style/horizontal_line_color_style"
        android:background="@color/gray_line_color_second"
        app:layout_constraintBottom_toBottomOf="@+id/tv_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>